deploy/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    lab: observability-lab
    tier: lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: vantia
  labels:
    lab: observability-lab
    tier: lab
