deploy/12-vantia-loadgen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vantia-loadgen
  namespace: vantia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vantia-loadgen
  template:
    metadata:
      labels:
        app: vantia-loadgen
    spec:
      priorityClassName: lab-low
      nodeSelector:
        kubernetes.io/hostname: ubuntu
      containers:
        - name: loadgen
          image: sauay/vantia:0.2.0
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 160Mi
